--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
       </div>
     </div>
   </nav>
-</div>
-<div class="parallax-container">
-  <div class="parallax"><img src="img/base.png"></div>
-</div>
-<!--Banner-->
+  <!-- <div class="parallax"><img src="img/base.png"></div>
+  </div>-->
+  </div>
+  <!--Banner-->
 <div class="homebanner section no-pad-bot z-depth-1" id="index-banner">
     <h1 class="text_h center header cd-headline letters type">
       {  Welcome,
@@ -103,7 +102,7 @@
             <p class='gray-text my-story'>
               I am a motivated Java developer looking to be a part of a software development team to contribute
               to and learn from. Having recently changed careers from the hospitality field, and having graduated
-              from the Iron Yard (a back-end engineering accelerator,) I'm excited to put my newly acquired skills
+              from the Iron Yard (a back-end engineering accelerator) I'm excited to put my newly acquired skills
               to use solving everyday problems.
               <br>
             </p>
@@ -169,7 +168,7 @@
         <div class="col s12">
           <div class="about-body z-depth-1">
             <p class="about-body-paragraph gray-text">
-              I grew up in Celebration Florida after my family had relocated from northern New Jersey.
+              I grew up in Celebration, Florida after my family had relocated from northern New Jersey.
               There I attended a small home-school cooperative called the Navigator School. After graduating
               high school I studied biblical scholarship at Eckerd College, graduating in 2010. After my graduation
               I was offered an opportunity to work as a pastry chef, which I did with great joy until the shop could
