Faded skill bar color

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
           <!-- End Skill Bar -->
 
           <div class="skillbar clearfix " data-percent="75%">
-            <div class="skillbar-title" style="background: rgba(3, 92, 8, 0.75);"><span>Spring</span></div>
-            <div class="skillbar-bar" style="background: rgba(37, 115, 31, 0.74);"></div>
+            <div class="skillbar-title" style="background: #035c08;"><span>Spring</span></div>
+            <div class="skillbar-bar" style="background: #25731f;"></div>
             <div class="skill-bar-percent"></div>
           </div>
           <!-- End Skill Bar -->
