--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               just outside Celebration Florida.
             </p>
             <p class="about-body-paragraph gray-text">
-              After working there for about 6 years I realized that working at a bar and was something that I
+              After working there for about 6 years I realized that working at a bar was something that I
               couldn't see myself doing for much longer, and began searching for more interesting career opportunities.
               A bar guest had mentioned that coding was something I should look into and sent me some introductory information.
               Having tried to code when I was much younger and finding it to be a fairly difficult I didn't think it would
@@ -367,7 +367,7 @@
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Wizard Battle <i class="mdi-navigation-close right"></i></span>
-              <p>First Project in Java my first week of learning code. It's a simple game all in one method.</p>
+              <p>First Project in Java my first week of learning code.</p>
               <p>This game runs in the console. Good luck! </p>
               <p>Tech: Java </p>
             </div>
