--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <img src="img/facetime.jpg" class='z-depth-1' alt='Profile Picture'height="350" width="210">
           </div>
           <div class='center-align' style="padding-top: 20px">
-            <a href="img/Resume2.pdf" class="waves-effect waves-light btn" download='Resume.pdf'>
+            <a href="img/Resume.pdf" class="waves-effect waves-light btn" download='Resume.pdf'>
               <i class="fa fa-download"></i>
-              Resume
+              Resum
             </a>
           </div>
         </div>
