--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class='center-align' style="padding-top: 20px">
             <a href="img/Resume.pdf" class="waves-effect waves-light btn" download='Resume.pdf'>
               <i class="fa fa-download"></i>
-              Resum
+              Resume
             </a>
           </div>
         </div>
